<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hall_bg_white_half_corners_10dp_select">

    <TextView
        android:id="@+id/tv_missing_remind_setting"
        style="@style/MyTextViewStyleNormal"
        android:padding="@dimen/sp_10"
        android:text="@string/tv_missing_remind_setting"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_missing_remind_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        app:srcCompat="@mipmap/close"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/line_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_missing_remind_setting"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:padding="@dimen/dp_20"
        app:layout_constraintBottom_toTopOf="@+id/line_bottom"
        app:layout_constraintTop_toBottomOf="@+id/line_top"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/line_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginBottom="@dimen/dp_60"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/btn_use_default_setting"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/hall_bg_white_10dp_select"
        android:text="@string/tv_use_default_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_cancel"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/hall_bg_white_10dp_select"
        android:text="@string/tv_common_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_use_default_setting"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_42"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/hall_bg_gray_10dp_select"
        android:text="@string/tv_common_save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_cancel"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>